Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-15288

LNet Health: increase transaction timeout

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.16.0
    • None
    • None
    • 3
    • 9223372036854775807

      In LU-13145, it was decided to increase default transaction timeout (LNET_TRANSACTION_TIMEOUT_DEFAULT) to 150s. But, in the associated patch, it was set to 50s. This modification will also modify  lnd_timeout (from 16 to 49).

            cbordage Cyril Bordage
            cbordage Cyril Bordage
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: